@@ -1,3 +1,4 @@
+	* fix library ABI to not depend on logging being enabled
 	* use hex encoding instead of base32 in create_magnet_uri
 	* include name, save_path and torrent_file in torrent_status, for improved performance
 	* separate anonymous mode and force-proxy mode, and tighten it up a bit
